# modern-api-template

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: main.yml
app/: config.py  database.py  dependencies.py  exceptions.py
